@@ -123,9 +123,18 @@ slurm_populate_node_partitions(node_info_msg_t *node_buffer_ptr,
 		xfree(node_ptr->partitions);
 	}
 
+	/*
+	 * Iterate through the partitions in the slurm.conf using "p".  The
+	 * partition has an array of node index pairs to specify the range.
+	 * Using "i", iterate by two's through the node list to get the
+	 * begin-end node range.  Using "j", interate through the node range
+	 * and add the partition name to the node's partition list.  If the
+	 * node on the partition is a singleton (i.e. Nodes=node1), the
+	 * begin-end range are both the same node index value.
+	 */
 	for (p = 0, part_ptr = part_buffer_ptr->partition_array;
 	     p < part_buffer_ptr->record_count; p++, part_ptr++) {
-		for (i = 0; ; i++) {
+		for (i = 0; ; i += 2) {
 			if (part_ptr->node_inx[i] == -1)
 				break;
 			for (j = part_ptr->node_inx[i];
